tmp/wrong_1640056280.7970629.txt
identifier '_syscall3'	 [StartOfLine]	Loc=<./tmp/code_9.c:1:1>
l_paren '('		Loc=<./tmp/code_9.c:1:10>
int 'int'		Loc=<./tmp/code_9.c:1:11>
comma ','		Loc=<./tmp/code_9.c:1:14>
identifier 'sys_faccessat'		Loc=<./tmp/code_9.c:1:15>
comma ','		Loc=<./tmp/code_9.c:1:28>
int 'int'		Loc=<./tmp/code_9.c:1:29>
comma ','		Loc=<./tmp/code_9.c:1:32>
identifier 'dirfd'		Loc=<./tmp/code_9.c:1:33>
comma ','		Loc=<./tmp/code_9.c:1:38>
const 'const'		Loc=<./tmp/code_9.c:1:39>
char 'char'	 [LeadingSpace]	Loc=<./tmp/code_9.c:1:45>
star '*'	 [LeadingSpace]	Loc=<./tmp/code_9.c:1:50>
comma ','		Loc=<./tmp/code_9.c:1:51>
identifier 'pathname'		Loc=<./tmp/code_9.c:1:52>
comma ','		Loc=<./tmp/code_9.c:1:60>
int 'int'		Loc=<./tmp/code_9.c:1:61>
comma ','		Loc=<./tmp/code_9.c:1:64>
identifier 'mode'		Loc=<./tmp/code_9.c:1:65>
r_paren ')'		Loc=<./tmp/code_9.c:1:69>
./tmp/code_9.c:3:2: error: #endif without #if
#endif
 ^
./tmp/code_9.c:19:72: error: expected value in expression
#if (defined(TARGET_NR_fstatat64) || defined(TARGET_NR_newfstatat)) && \
                                                                       ^
./tmp/code_9.c:37:73: error: expected value in expression
#if (defined(TARGET_NR_newfstatat) || defined(TARGET_NR_fstatat64) ) && \
                                                                        ^
./tmp/code_9.c:115:2: error: #endif without #if
#endif /* CONFIG_ATFILE */
 ^
./tmp/code_9.c:125:2: error: unterminated conditional directive
#if defined(TARGET_NR_inotify_init) && defined(__NR_inotify_init)
 ^
./tmp/code_9.c:119:2: error: unterminated conditional directive
#ifdef CONFIG_INOTIFY
 ^
eof ''		Loc=<./tmp/code_9.c:133:2>
6 errors generated.
